--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Web Avanzada</title>
+    <title>Página Web</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js"></script>
 </head>
 <body>
     <header>
-        <h1>Mi Página Web Avanzada</h1>
+        <h1>Mi Página Web </h1>
     </header>
 
     <nav>
@@ -19,13 +19,13 @@
     </nav>
 
     <section id="inicio">
-        <h2>¡Bienvenido a nuestra página web!</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <h2>¡Bienvenido a mi pagina web!</h2>
+        <p>¡Bienvenidos a nuestro espacio en línea! Estamos emocionados de tenerte aquí y esperamos que disfrutes de tu visita..</p>
     </section>
 
     <section id="acerca">
         <h2>Acerca de Nosotros</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <p>Descubre quiénes somos y lo que nos impulsa a superar límites cada día."</p>
     </section>
 
     <section id="contacto">
